// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinespaceUserAccessModal renders properly with pending access request 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-MINESPACE_USER_ACCESS_APPROVAL form-edit"
      id="MINESPACE_USER_ACCESS_APPROVAL"
    >
      <div
        class="hide-required-indicator"
      >
        <h3
          class="ant-typography"
        >
          User Information
        </h3>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_display_name"
                title=""
              >
                <div>
                  Full Name
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="display_name"
                    class="ant-input ant-input-disabled"
                    data-testid="display_name"
                    disabled=""
                    name="display_name"
                    type="text"
                    value="Pending User"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_display_name_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_bceid_username"
                title=""
              >
                <div>
                  BCeID Username
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="bceid_username"
                    class="ant-input ant-input-disabled"
                    data-testid="bceid_username"
                    disabled=""
                    name="bceid_username"
                    type="text"
                    value="pending.user@bceid"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_bceid_username_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_email"
                title=""
              >
                <div>
                  Email Address
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="email"
                    class="ant-input ant-input-disabled"
                    data-testid="email"
                    disabled=""
                    name="email"
                    type="text"
                    value="pending.user@email.com"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_email_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-divider ant-divider-horizontal"
          role="separator"
        />
        <h3
          class="ant-typography"
        >
          Access Request Details
        </h3>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.business_name"
                title=""
              >
                <div>
                  Business Name
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.business_name"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.business_name"
                    disabled=""
                    name="access_request.business_name"
                    type="text"
                    value="Pending Business"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.business_name_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.access_request_text"
                title=""
              >
                <div>
                  Access Request Notes
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.access_request_text"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.access_request_text"
                    disabled=""
                    name="access_request.access_request_text"
                    type="text"
                    value=""
                  />
                  <div
                    class="form-item-help access_request.access_request_text-form-help"
                  >
                    Mines or permits that the user was unable to select
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.access_request_text_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.ministry_contact"
                title=""
              >
                <div>
                  Ministry Contact
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.ministry_contact"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.ministry_contact"
                    disabled=""
                    name="access_request.ministry_contact"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.ministry_contact_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
      />
      <h3
        class="ant-typography"
      >
        Role Approvals
      </h3>
      <div
        class="ant-typography"
      >
        Review and approve individual role requests for each mine:
      </div>
      <a
        role="link"
        tabindex="0"
        title="Add new role assignment"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
         Add new role assignment
      </a>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
      />
      <h3
        class="ant-typography"
      >
        Mine Access
      </h3>
      <div
        class="ant-typography"
      >
        Select mines for basic access without specific roles:
      </div>
      <div
        class="form-multiselect"
      >
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="MINESPACE_USER_ACCESS_APPROVAL_mines"
                title=""
              >
                <div
                  style="width: 100%;"
                >
                  Mines
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-select ant-select-sm ant-select-in-form-item ant-select-multiple ant-select-show-arrow ant-select-show-search"
                    style="width: 100%;"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <div
                        class="ant-select-selection-overflow"
                      >
                        <div
                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                          style="opacity: 1;"
                        >
                          <div
                            class="ant-select-selection-search"
                            style="width: 0px;"
                          >
                            <input
                              aria-activedescendant="mines_list_0"
                              aria-autocomplete="list"
                              aria-controls="mines_list"
                              aria-haspopup="listbox"
                              aria-owns="mines_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="mines"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                            <span
                              aria-hidden="true"
                              class="ant-select-selection-search-mirror"
                            >
                              
                               
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="ant-select-selection-placeholder"
                      >
                        Search by mine name, mine number, or permit number (minimum 3 characters)
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_mines_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
      />
      <h3
        class="ant-typography"
      >
        User Access Status
      </h3>
      <div
        class="ant-form-item ant-form-item-with-help"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="MINESPACE_USER_ACCESS_APPROVAL_access_request.request_status"
              title=""
            >
              <div
                style="width: 100%;"
              >
                Grant required roles in keycloak
              </div>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-radio-group ant-radio-group-solid"
                >
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio ant-radio-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-input"
                        name="access_request.request_status"
                        type="radio"
                        value="0"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      Pending
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        name="access_request.request_status"
                        type="radio"
                        value="1"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      Approved
                    </span>
                  </label>
                  <label
                    class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                  >
                    <span
                      class="ant-radio"
                    >
                      <input
                        class="ant-radio-input"
                        name="access_request.request_status"
                        type="radio"
                        value="2"
                      />
                      <span
                        class="ant-radio-inner"
                      />
                    </span>
                    <span>
                      Rejected
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              style="display: flex; flex-wrap: nowrap;"
            >
              <div
                class="ant-form-item-explain ant-form-item-explain-connected"
                id="MINESPACE_USER_ACCESS_APPROVAL_access_request.request_status_help"
                role="alert"
              >
                <div
                  class=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          disabled=""
          type="submit"
        >
          <span>
            Save Changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`MinespaceUserAccessModal renders properly with rejected user 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-MINESPACE_USER_ACCESS_APPROVAL form-edit"
      id="MINESPACE_USER_ACCESS_APPROVAL"
    >
      <div
        class="hide-required-indicator"
      >
        <h3
          class="ant-typography"
        >
          User Information
        </h3>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_display_name"
                title=""
              >
                <div>
                  Full Name
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="display_name"
                    class="ant-input ant-input-disabled"
                    data-testid="display_name"
                    disabled=""
                    name="display_name"
                    type="text"
                    value="Rejected User"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_display_name_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_bceid_username"
                title=""
              >
                <div>
                  BCeID Username
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="bceid_username"
                    class="ant-input ant-input-disabled"
                    data-testid="bceid_username"
                    disabled=""
                    name="bceid_username"
                    type="text"
                    value="rejected.user@bceid"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_bceid_username_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_email"
                title=""
              >
                <div>
                  Email Address
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="email"
                    class="ant-input ant-input-disabled"
                    data-testid="email"
                    disabled=""
                    name="email"
                    type="text"
                    value="rejected.user@email.com"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_email_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-divider ant-divider-horizontal"
          role="separator"
        />
        <h3
          class="ant-typography"
        >
          Access Request Details
        </h3>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.business_name"
                title=""
              >
                <div>
                  Business Name
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.business_name"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.business_name"
                    disabled=""
                    name="access_request.business_name"
                    type="text"
                    value="Rejected Business"
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.business_name_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.access_request_text"
                title=""
              >
                <div>
                  Access Request Notes
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.access_request_text"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.access_request_text"
                    disabled=""
                    name="access_request.access_request_text"
                    type="text"
                    value=""
                  />
                  <div
                    class="form-item-help access_request.access_request_text-form-help"
                  >
                    Mines or permits that the user was unable to select
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.access_request_text_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_access_request.ministry_contact"
                title=""
              >
                <div>
                  Ministry Contact
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-label="access_request.ministry_contact"
                    class="ant-input ant-input-disabled"
                    data-testid="access_request.ministry_contact"
                    disabled=""
                    name="access_request.ministry_contact"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_access_request.ministry_contact_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
      />
      <h3
        class="ant-typography"
      >
        Role Approvals
      </h3>
      <div
        class="ant-typography"
      >
        Review and approve individual role requests for each mine:
      </div>
      <a
        role="link"
        tabindex="0"
        title="Add new role assignment"
      >
        <span
          aria-label="plus"
          class="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
         Add new role assignment
      </a>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
      />
      <h3
        class="ant-typography"
      >
        Mine Access
      </h3>
      <div
        class="ant-typography"
      >
        Select mines for basic access without specific roles:
      </div>
      <div
        class="form-multiselect"
      >
        <div
          class="ant-form-item ant-form-item-with-help"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="MINESPACE_USER_ACCESS_APPROVAL_mines"
                title=""
              >
                <div
                  style=""
                >
                  Mines
                   
                  <span
                    class="form-item-optional"
                  >
                     (optional)
                  </span>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="false"
                    class="ant-select ant-select-sm ant-select-in-form-item ant-select-multiple ant-select-show-arrow ant-select-show-search"
                    style="width: 100%;"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <div
                        class="ant-select-selection-overflow"
                      >
                        <div
                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                          style="opacity: 1;"
                        >
                          <div
                            class="ant-select-selection-search"
                            style="width: 0px;"
                          >
                            <input
                              aria-activedescendant="mines_list_0"
                              aria-autocomplete="list"
                              aria-controls="mines_list"
                              aria-haspopup="listbox"
                              aria-owns="mines_list"
                              aria-required="false"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="mines"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                            <span
                              aria-hidden="true"
                              class="ant-select-selection-search-mirror"
                            >
                              
                               
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="ant-select-selection-placeholder"
                      >
                        Search by mine name, mine number, or permit number (minimum 3 characters)
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                style="display: flex; flex-wrap: nowrap;"
              >
                <div
                  class="ant-form-item-explain ant-form-item-explain-connected"
                  id="MINESPACE_USER_ACCESS_APPROVAL_mines_help"
                  role="alert"
                >
                  <div
                    class=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-end"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          disabled=""
          type="submit"
        >
          <span>
            Save Changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
